Fix colors in ban/channel lists, increase topic color contrast

--- a/client/themes/solarized.css
+++ b/client/themes/solarized.css
@@ -285,6 +285,18 @@ body {
 	border-color: #ad1457;
 }
 
+#windows .header .topic,
+#chat table.channel-list td {
+	color: #999;
+}
+
+#chat table.channel-list th,
+#chat table.ban-list th,
+#chat table.channel-list td,
+#chat table.ban-list td {
+	border-bottom-color: #002b36;
+}
+
 /* Increase contrast of some IRC colors */
 .irc-fg2 { color: #0074d9; }
 .irc-fg5 { color: #e969a7; }
